Add functions for SDK demo
1. Support DPS notification in android Demo
2. Support speak-to function in iOS Demo

--- a/Demo/Android/app/src/main/AndroidManifest.xml
+++ b/Demo/Android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".WifiConfigActivity" />
-        <activity android:name=".CmdTestActivity"></activity>
+        <activity android:name=".CmdTestActivity"/>
+
+        <service android:name="com.linkwil.service.DemoService" />
+        <receiver android:name="com.linkwil.service.Alarm_Receiver"/>
     </application>
 
 </manifest>
