--- a/Demo/iOS/ECSDKDemo/ECSDKDemo/Info.plist
+++ b/Demo/iOS/ECSDKDemo/ECSDKDemo/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>授权使用麦克风用于对讲</string>
 </dict>
 </plist>
